--- a/index.html
+++ b/index.html
@@ -3,6 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+  body {
+    font-family: Arial, sans-serif;
+    padding: 10px;
+  }
+
+  input, select, textarea, button {
+    width: 100%;      /* makes them full width */
+    padding: 10px;    /* bigger click/tap area */
+    margin: 5px 0;    /* spacing between fields */
+    box-sizing: border-box; /* prevents overflow */
+    font-size: 16px;  /* easier to read on mobile */
+  }
+
+  button {
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background-color: #45a049;
+  }
+</style>
+
     <title>Survey Form</title>
   </head>
 
